<resources>
    <string name="app_name">FoodRunner</string>
    <string name="mobile_number_10_digit">Mobile Number (10 digit)</string>
    <string name="password">password</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="sign_up_request"><u>Don\'t have an account? sign up now</u></string>
    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="forgot_password_comment">Enter your register mobile number and email bellow:</string>
    <string name="enter_the_received_otp_bellow">Enter the received OTP bellow</string>
    <string name="otp">OTP(4 characters)</string>
    <string name="new_password">New Password(Min.4 characters)</string>
    <string name="confirm_password">Confirm password</string>
    <string name="preferences_file">Main preferences</string>
    <string name="home">Home</string>
    <string name="favourite_restaurant">Favourite Restaurant</string>
    <string name="my_profile">My Profile</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log Out</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="_9999999999">9999999999</string>
</resources>