<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/MyProfile"
            android:icon="@drawable/ic_myprofile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/favourite"
            android:icon="@drawable/ic_favourites"
            android:title="@string/favourite_restaurant" />
        <item
            android:id="@+id/orderHistory"
            android:icon="@drawable/ic_history"
            android:title="@string/order_history" />
        <item
            android:id="@+id/faqs"
            android:icon="@drawable/ic_faqs"
            android:title="@string/faqs" />
    </group>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />
</menu>